Adding product API